examples/invalid/generic_interface_bound_fail.fg
interface Renderer[T]:
    fn render(value: T) -> String

struct Point:
    pub x: Int

fn show[T: Renderer[T]](value: T) -> String:
    return "shown"

fn main():
    pt := Point(1)
    show(pt)
